Updated to v1.3.13 Added quote or brackets around selected text in notes Removed list start when pressing enter in empty list item Set shift enter to add new list entry in empty list entry Shift+enter goes to new line without list start when in non empty list entry Added context menu entry to create a new note from selected text Fixed style bug with popup

--- a/popup/popup.sass
+++ b/popup/popup.sass
@@ -9,6 +9,7 @@ $height: 24rem
 body
   width: 18rem
   height: $height
+  min-height: 100vh
   margin: 0
   color: var(--uni-text)
   background: var(--uni-bg-2)
@@ -30,7 +31,7 @@ body
   z-index: 1
   overflow: hidden
   flex: 1 0 auto
-  max-height: calc(#{$height} - 3rem)
+  max-height: max(calc(#{$height} - 3rem), calc(100vh - 3rem))
   position: relative
   .page
     width: 100%
